--- a/src/scss/responsbility.scss
+++ b/src/scss/responsbility.scss
@@ -1,7 +1,5 @@
 @media only screen and (max-width: 1313px) {
-    .pizza__title{
-        font-size: 100px;
-    }
+   
  .pizza{
     display: flex;
     flex-direction: column;
@@ -29,6 +27,14 @@
        font-size: 10px;
         
    }
+}
+
+
+@media only screen and (max-width: 444px) {
+   .pizza__title{
+       font-size: 50px;
+   }
+
 }
 
 
