--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -28,8 +28,9 @@ body::-webkit-scrollbar {
   
 }
 .pizza {
+  margin-bottom: -20px;
   &__body{
-   margin-bottom: -30px;
+   margin: -25px 0px 0px 5px;
   }
   display: flex;
   justify-content: space-between;
@@ -117,8 +118,16 @@ body::-webkit-scrollbar {
     display: flex;
   }
   &__image {
-    padding-top: 8px;
-    margin-right: 10px;
+    margin: -30px 0px 0px -35px;
+   
+  }
+  &__image img{
+    width: 80px;
+    height: 80px;
+    position: relative;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
   }
 
   &__title {
