--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -4,12 +4,17 @@
 .wrapper {
   // max-width: 100vw;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background: linear-gradient(90deg, rgba(255,175,0,1) 0%, rgba(238,124,0,1) 27%, rgba(255,239,0,1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 175, 0, 1) 0%,
+    rgba(238, 124, 0, 1) 27%,
+    rgba(255, 239, 0, 1) 100%
+  );
   padding: 50px 40px 0px 40px;
 }
 
 body::-webkit-scrollbar {
-  display: none; 
+  display: none;
 }
 .container {
   max-width: 1300px;
@@ -25,12 +30,11 @@ body::-webkit-scrollbar {
 .header {
   flex: 1 1 auto;
   margin: 30px;
-  
 }
 .pizza {
   margin-bottom: -20px;
-  &__body{
-   margin: -25px 0px 0px 5px;
+  &__body {
+    margin: -25px 0px 0px 5px;
   }
   display: flex;
   justify-content: space-between;
@@ -43,31 +47,59 @@ body::-webkit-scrollbar {
   }
   &__search {
     margin-right: 70px;
-  }
-  &__card:hover{
-      background-position: right center; /* change the direction of the change here */
-      color: #fff;
-      text-decoration: none;
-  }
-  &__card {
-    
-    &__order {
-      color: white;
-    }
+
+    &__button {
       display: flex;
       align-items: center;
       height: 48px;
-      background-image: linear-gradient(to right, #FF512F 0%, #F09819  51%, #FF512F  100%);
-      text-transform: uppercase;
+      background-image: linear-gradient(
+        to right,
+        #ff512f 0%,
+        #f09819 51%,
+        #ff512f 100%
+      );
       transition: 0.5s;
       background-size: 200% auto;
-      color: white;            
+      color: white;
       box-shadow: 0 0 20px #eee;
       border-radius: 10px;
-      
-
-    
-   
+  
+        cursor: pointer;
+        padding: 0px 20px 0px 20px;
+        color: white;
+        font-weight: 700;
+        font-size: 15px;
+  }
+  &__button:hover{
+    background-position: right center; /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;
+  }
+}
+  &__card:hover {
+    background-position: right center; /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;
+  }
+  &__card {
+    &__order {
+      color: white;
+    }
+    display: flex;
+    align-items: center;
+    height: 48px;
+    background-image: linear-gradient(
+      to right,
+      #ff512f 0%,
+      #f09819 51%,
+      #ff512f 100%
+    );
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
 
     span {
       cursor: pointer;
@@ -75,7 +107,7 @@ body::-webkit-scrollbar {
       color: white;
       font-weight: 700;
       font-size: 15px;
-      
+
       img {
         margin: 5px 10px 0px 0px;
       }
@@ -96,11 +128,10 @@ body::-webkit-scrollbar {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    .pizza__like{
+    .pizza__like {
       margin: 8px 0px 0px 10px;
-      
-    } 
-    .pizza__like img{
+    }
+    .pizza__like img {
       cursor: pointer;
       width: 30px;
       height: 30px;
@@ -108,10 +139,14 @@ body::-webkit-scrollbar {
       animation-name: example;
       animation-duration: 1s;
       animation-iteration-count: 1000;
-    } 
+    }
     @keyframes example {
-      100%   {width: 35px; height: 35px; left:0px; top:0px;}
-      
+      100% {
+        width: 35px;
+        height: 35px;
+        left: 0px;
+        top: 0px;
+      }
     }
   }
   &__body__one {
@@ -119,9 +154,8 @@ body::-webkit-scrollbar {
   }
   &__image {
     margin: -30px 0px 0px -35px;
-   
   }
-  &__image img{
+  &__image img {
     width: 80px;
     height: 80px;
     position: relative;
@@ -131,14 +165,14 @@ body::-webkit-scrollbar {
   }
 
   &__title {
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
     font-size: 50px;
     text-shadow: 2px 2px gray;
     font-weight: 900;
-    color:  rgba(238,124,0,1);
-
+    color: rgba(238, 124, 0, 1);
   }
-  &__title:hover{
+  &__title:hover {
     text-shadow: 5px 5px gray;
     transition: 0.9s;
   }
@@ -149,27 +183,25 @@ body::-webkit-scrollbar {
     line-height: 19px;
   }
 }
-.detail{
+.detail {
   margin: 50px 0px 10px 20px;
-  &__body{
+  &__body {
     display: flex;
-    
   }
-  &__body img{
+  &__body img {
     max-width: 600px;
     max-height: 600px;
   }
-  &__info{
-
-    .titlestyle{
-        font-size: 20px;
-        font-weight: 700;
+  &__info {
+    .titlestyle {
+      font-size: 20px;
+      font-weight: 700;
     }
-    &__title{
+    &__title {
       font-size: 20px;
       margin-bottom: 20px;
     }
-    &__price{
+    &__price {
       font-size: 20px;
     }
   }
@@ -179,7 +211,7 @@ body::-webkit-scrollbar {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  border-top: 1px solid #F9F9F9;
+  border-top: 1px solid #f9f9f9;
   padding-top: 20px;
   .activex {
     font-weight: 700;
@@ -201,7 +233,6 @@ body::-webkit-scrollbar {
     position: absolute;
     top: 250px;
     z-index: 1;
-
   }
   &__items ul li {
     color: #000000;
@@ -209,7 +240,6 @@ body::-webkit-scrollbar {
     font-size: 14px;
     text-align: center;
     padding: 15px 0px 15px 0px;
-   
   }
   &__list ul {
     display: flex;
@@ -223,7 +253,7 @@ body::-webkit-scrollbar {
     cursor: pointer;
     font-weight: 700;
   }
- 
+
   &__filter {
     // padding-top: 10px;
     display: flex;
@@ -241,7 +271,7 @@ body::-webkit-scrollbar {
     color: #fe5f1e;
     margin-left: 10px;
   }
-  &__popular:hover{
+  &__popular:hover {
     cursor: pointer;
     font-weight: 900;
     color: #fe5f1e;
@@ -266,13 +296,13 @@ body::-webkit-scrollbar {
   margin: 0 auto;
   flex-wrap: wrap;
 }
-.blockpizza:hover{
+.blockpizza:hover {
   cursor: pointer;
-  border: 1px solid #F3F3F3;
+  border: 1px solid #f3f3f3;
   border-radius: 30px;
   padding: 5px 0px 10px 7px;
 }
-.blockpizza__detail{
+.blockpizza__detail {
   border: 1px solid #d3d3d3;
   border-radius: 30px;
   padding: 30px;
@@ -286,29 +316,26 @@ body::-webkit-scrollbar {
 }
 .blockpizza {
   margin: 40px auto;
-  &__image .like{
+  &__image .like {
     width: 30px;
     height: 30px;
     position: relative;
     top: 20px;
     right: 20px;
-   
   }
-  &__image .nolike{
+  &__image .nolike {
     width: 30px;
     height: 30px;
     position: relative;
     top: 20px;
     right: 20px;
     background-color: red;
-   
   }
   &__image .pizzaimage {
     width: 260px;
     height: 260px;
   }
   &__title {
-   
     font-weight: 900;
     font-size: 18px;
     line-height: 24px;
@@ -444,7 +471,7 @@ body::-webkit-scrollbar {
   padding-top: 10px;
 
   &__title {
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 30px;
     color: #fe5f1e;
     filter: blur(0.8px);
@@ -658,238 +685,246 @@ body::-webkit-scrollbar {
   border: 1px solid #f3f3f3;
 }
 
-
-
-.recentorder{
-  &__wrapper{
+.recentorder {
+  &__wrapper {
     margin: 40px 0px 0px 0px;
   }
-  &__justtitle{
+  &__justtitle {
     color: rgb(18, 18, 18);
     letter-spacing: 0.4px;
     font-size: 20px;
     font-weight: 700;
     margin: 0px 0px 20px 0px;
   }
-  &__container{
+  &__container {
     cursor: pointer;
     display: flex;
     flex-wrap: wrap;
   }
-  &__title{
-   color: rgb(112, 112, 112);
-   font-size: 14px;
-   margin: 0px 0px 5px 0px;
+  &__title {
+    color: rgb(112, 112, 112);
+    font-size: 14px;
+    margin: 0px 0px 5px 0px;
   }
-  &__shipping{
+  &__shipping {
     color: rgb(69, 133, 0);
     font-size: 16px;
     margin: 0px 0px 5px 0px;
   }
-  &__date{
+  &__date {
     font-size: 14px;
     color: rgb(102, 102, 102);
     font-weight: 700;
     line-height: 20px;
   }
-  &__images img{
-      width: 48px;
-      height: 48px;
-      margin: 5px;
+  &__images img {
+    width: 48px;
+    height: 48px;
+    margin: 5px;
   }
-  &__items{
+  &__items {
     margin: 0px 15px 10px 0px;
-      width: 260px;
-      padding: 10px 0px 10px 10px;
-      display: flex;
-      flex-direction: column;
-      border: 1px solid #D8D8D8; 
-      border-radius: 15px;
-      
+    width: 260px;
+    padding: 10px 0px 10px 10px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #d8d8d8;
+    border-radius: 15px;
   }
 }
 
-
-
-
-
-.recentorderdetail__container{
-  & .diverse{
+.recentorderdetail__container {
+  & .diverse {
     border: 1px solid #f4f4f4;
     padding: 10px;
     margin: 0px 0px 20px 0px;
     border-radius: 10px;
   }
-  & .diverse span{
+  & .diverse span {
     margin: 30px 0px 0px 0px;
   }
   border-radius: 10px;
   border: 1px solid #f4f4f4;
-  
+
   margin: 40px 0px 0px 0px;
   padding: 25px 20px 25px 20px;
 
-  & img{
+  & img {
     margin: 8px 30px 0px 0px;
     width: 75px;
     height: 75px;
   }
-  .recentorderdetail__footer{
+  .recentorderdetail__footer {
     display: flex;
     border-top: 1px solid #f4f4f4;
     border-bottom: 1px solid #f4f4f4;
     margin: 10px 0px;
     padding: 10px 0px;
   }
-  .recentorderdetail__body{
+  .recentorderdetail__body {
     margin-top: 0px;
-    & .gapping{
+    & .gapping {
       margin: 5px 0px;
     }
-    & span{
+    & span {
       font-weight: 700;
     }
   }
-  .recentorderdetail__title{
+  .recentorderdetail__title {
     font-size: 16px;
     font-weight: 700;
     margin-bottom: 20px;
   }
-  .recentorderdetail__status{
+  .recentorderdetail__status {
     color: #197b2a;
     font-size: 18px;
     font-weight: 700;
   }
-  .recentorderdetail__date{
+  .recentorderdetail__date {
     margin: 10px 0px;
   }
 }
 
 @media only screen and (max-width: 1313px) {
-  .limit{
+  .limit {
     font-size: 100%;
-    
   }
-  .recentorderdetail__container{
+  .recentorderdetail__container {
     margin: 20px -20px 0px -20px;
   }
-  .empty__image img{
+  .empty__image img {
     width: 100%;
     height: 100%;
   }
-  .font{
+  .font {
     font-size: 100%;
   }
-  .order__cart{
+  .order__cart {
     font-size: 100%;
   }
-  .order__summa{
+  .order__summa {
     font-size: 100%;
   }
-  .order__all{
+  .order__all {
     font-size: 100%;
   }
-  .order__body{
+  .order__body {
     margin-left: -20px;
   }
-  .order__price{
+  .order__price {
     font-size: 100%;
   }
-  .order__add__count{
+  .order__add__count {
     font-size: 100%;
   }
-  .order__title__text{
+  .order__title__text {
     font-size: 100%;
   }
-.order__title{
-  font-size: 100%;
-}
-  .order__container{
+  .order__title {
+    font-size: 100%;
+  }
+  .order__container {
     margin: 0 auto;
   }
-   .detail__body{
+  .detail__body {
     display: flex;
     flex-wrap: wrap;
-    img{
+    img {
       width: 100%;
     }
-    
-   }
-  
-   .detail__info__title{
-    font-size: 100%;
-   }
-   .detail__info__price{
-    font-size: 100%;
-   }
-  .pizza{
-     display: flex;
-     flex-direction: row;
-     
   }
-  .pizza__body__second{
-     margin: 0px;
+
+  .detail__info__title {
+    font-size: 100%;
   }
-  
-  .detail__info__title .titlestyle{
+  .detail__info__price {
     font-size: 100%;
-   }
-   .detail__info__price .titlestyle{
+  }
+  .pizza {
+    display: flex;
+    flex-direction: row;
+  }
+  .pizza__body__second {
+    margin: 0px;
+  }
+
+  .detail__info__title .titlestyle {
     font-size: 100%;
-   }
-    .menu__list ul {
-     display: flex;
-     flex-wrap: wrap;
-     width: 100%;
-    }
-    .menu__list ul li{
-        font-size: 10px;
-         
-    }
-    .container{
-      margin: -20px;
-    }
- }
- 
+  }
+  .detail__info__price .titlestyle {
+    font-size: 100%;
+  }
+  .menu__list ul {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .menu__list ul li {
+    font-size: 10px;
+  }
+  .container {
+    margin: -20px;
+  }
+}
+
 @media only screen and (max-width: 830px) {
-  .pizza{
+  .pizza {
     display: flex;
     flex-direction: column;
-    
- }
- .pizza__search {
-  margin-right: 50px;
-  width: 240px;
- }
- .pizza__body__second{
-  margin: 30px 0px -20px 0px;
-}
-.pizza__card{
-  margin: -58px 0px 0px 300px;
-}
-.container{
-  margin: -30px;
-}
-}
-
-
-@media only screen and (max-width: 505px) {
-  .blockpizza__detail{
-    margin-left: -30px;
   }
-  .pizza__card{
-    margin: 0px 0px 0px 0px;
+  .pizza__search {
+    margin-right: 50px;
+    width: 240px;
   }
-  .pizza__body__second{
-    margin: 40px 0px -30px 0px;
+  .pizza__body__second {
+    margin: 30px 0px -20px 0px;
   }
-//   .pizza{
-//     display: flex;
-//     flex-direction: column;
-    
-//  }
-  .container{
+  .pizza__card {
+    margin: -58px 0px 0px 300px;
+  }
+  .container {
     margin: -30px;
   }
 }
 
+@media only screen and (max-width: 505px) {
+  .blockpizza__detail {
+    margin-left: -30px;
+  }
+  .pizza__card {
+    margin: 0px 0px 0px 0px;
+  }
+  .pizza__body__second {
+    margin: 40px 0px -30px 0px;
+  }
+  //   .pizza{
+  //     display: flex;
+  //     flex-direction: column;
+
+  //  }
+  .container {
+    margin: -30px;
+  }
+}
+
+.admin__container{
+  margin: 20px 0px 0px 0px;
+  
+}
+
+.admin__image{
+  width: 50px;
+    height: 50px;
+    
+}
+.admin__list{
+  display: flex;
+}
+
+.admin__list li{
+  margin-right: 5px;
+
+}
+.btn{
+  margin-right: 3px;
+}
