--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -863,11 +863,16 @@ body::-webkit-scrollbar {
     font-size: 10px;
   }
   .container {
-    margin: -20px;
+    margin: 0;
   }
 }
 
+
 @media only screen and (max-width: 830px) {
+  .wrapper{
+    
+    margin: 0;
+  }
   .pizza {
     display: flex;
     flex-direction: column;
@@ -886,7 +891,18 @@ body::-webkit-scrollbar {
     margin: -30px;
   }
 }
-
+@media only screen and (max-width: 805px) {
+  .admin__table thead tr {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .admin__table tbody tr  {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
 @media only screen and (max-width: 505px) {
   .blockpizza__detail {
     margin-left: -30px;
