--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -870,7 +870,7 @@ body::-webkit-scrollbar {
 @media only screen and (max-width: 830px) {
   .wrapper{
     
-    margin: 0;
+    padding: 5;
   }
   .pizza {
     display: flex;
@@ -887,10 +887,20 @@ body::-webkit-scrollbar {
     margin: -58px 0px 0px 300px;
   }
   .container {
-    margin: -30px;
+    margin: -20px 0px 0px 0px; 
+   
+  }
+  .header{
+    margin: 30px -5px 0px 3px; 
   }
 }
 @media only screen and (max-width: 805px) {
+  .menu{
+    margin: 30px 0px 0px 0px;
+  }
+  .pizza__body__second{
+    margin: 50px 0px -40px 0px;
+  }
   .admin__table thead tr {
     display: flex;
     flex-direction: column;
@@ -902,6 +912,18 @@ body::-webkit-scrollbar {
     flex-wrap: wrap;
   }
 }
+@media only screen and (max-width: 669) {
+  
+  
+
+ 
+}
+@media only screen and (max-width: 571px) {
+  .pizza__body__second{
+    margin: 60px 30px -85px -90px;
+  }
+}
+
 @media only screen and (max-width: 505px) {
   .blockpizza__detail {
     margin-left: -30px;
@@ -917,9 +939,17 @@ body::-webkit-scrollbar {
   //     flex-direction: column;
 
   //  }
-  .container {
-    margin: -30px;
+  .wrapper{
+    margin: 0;
   }
+  .container {
+    margin: -20px 0px 0px 0px; 
+   
+  }
+}
+
+.d-flex justify-content-end{
+  margin-top: 20px;
 }
 
 .admin__container{
@@ -955,4 +985,14 @@ body::-webkit-scrollbar {
 .update__image img{
   width: 200px;
   height: 200px;
+}
+
+@media only screen and (max-width: 380px) {
+  .pizza__title{
+    font-size: 30px;
+  }
+  .pizza__text{
+    font-size: 15px;
+  }
+
 }
