--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -780,8 +780,49 @@ body::-webkit-scrollbar {
     margin: 10px 0px;
   }
 }
+@media only screen and (max-width: 1900px) {
+  .burger{
+    display: none;
+  }
+  .admin__image{
+    width: 50px;
+    height: 50px;
+     
+   }
+}
+@media only screen and (max-width: 687px) {
+
+  .admin__table thead tr{
+    display: flex;
+    flex-direction: column;
+  }
+  .admin__table tbody tr {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .admin__table tbody th {
+    display: flex;
+    flex-direction: column;
+  }
+  .admin__image{
+    width: 250px;
+    height: 150px;
+     
+   }
+}
 
 @media only screen and (max-width: 1313px) {
+  .linkBurger{
+    color: #000000;
+    font-size: 20px;
+    margin-bottom: 5px;
+  }
+  .admin__image{
+   width: 50px;
+   height: 50px;
+    
+  }
   .limit {
     font-size: 100%;
   }
@@ -864,132 +905,24 @@ body::-webkit-scrollbar {
 }
 
 
-@media only screen and (max-width: 830px) {
+
+
+
+@media only screen and (max-width: 1213px) {
+  .burger{
+    display:block;
+  }
+  .pizza__body{
+    display: block;
+    margin-bottom: 20px;
+  }
+  .pizza__body__second{
+    display: none;
+  }
   .wrapper{
-    
-    padding: 5;
+    padding: 20px 20px;
   }
-  .pizza {
-    display: flex;
-    flex-direction: column;
-  }
-  .pizza__search {
-    margin-right: 50px;
-    width: 240px;
-  }
-  .pizza__body__second {
-    margin: 30px 0px -20px 0px;
-  }
-  .pizza__card {
-    margin: -58px 0px 0px 300px;
-  }
-  .container {
-    margin: -20px 0px 0px 0px; 
-   
-  }
-  .header{
-    margin: 30px -5px 0px 3px; 
-  }
-}
-@media only screen and (max-width: 805px) {
   .menu{
-    margin: 30px 0px 0px 0px;
+    display: none;
   }
-  .pizza__body__second{
-    margin: 50px 0px -40px 0px;
-  }
-  .admin__table thead tr {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-  .admin__table tbody tr  {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-}
-@media only screen and (max-width: 669) {
-  
-  
-
- 
-}
-@media only screen and (max-width: 571px) {
-  .pizza__body__second{
-    margin: 60px 30px -85px -90px;
-  }
-}
-
-@media only screen and (max-width: 505px) {
-  .blockpizza__detail {
-    margin-left: -30px;
-  }
-  .pizza__card {
-    margin: 0px 0px 0px 0px;
-  }
-  .pizza__body__second {
-    margin: 40px 0px -30px 0px;
-  }
-  //   .pizza{
-  //     display: flex;
-  //     flex-direction: column;
-
-  //  }
-  .wrapper{
-    margin: 0;
-  }
-  .container {
-    margin: -20px 0px 0px 0px; 
-   
-  }
-}
-
-.d-flex justify-content-end{
-  margin-top: 20px;
-}
-
-.admin__container{
-  max-width: 100%;
-  margin: 20px 0px 0px 0px;
-  
-}
-
-.admin__image{
-  width: 50px;
-    height: 50px;
-    
-}
-.admin__list{
-  display: flex;
-}
-
-.admin__list li{
-  margin-right: 5px;
-
-}
-.btn{
-  margin-right: 3px;
-}
-
-.input-group{
-  margin-bottom: 10px;
-}
-.update__image {
-  display: flex;
-  justify-content: center;
-}
-.update__image img{
-  width: 200px;
-  height: 200px;
-}
-
-@media only screen and (max-width: 380px) {
-  .pizza__title{
-    font-size: 30px;
-  }
-  .pizza__text{
-    font-size: 15px;
-  }
-
 }
