--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -813,8 +813,19 @@ body::-webkit-scrollbar {
 }
 
 @media only screen and (max-width: 1313px) {
+  
   .linkBurger{
     color: #000000;
+    font-size: 18px;
+    margin-bottom: 5px;
+    border: 1px solid #f9f9f9;
+    background-color: #f9f9f9;
+    border-radius: 30px;
+    padding: 8px 20px;
+    text-align: center;
+  }
+  .linkBurger:hover{
+    color: #eb5a1e;
     font-size: 20px;
     margin-bottom: 5px;
   }
