--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -467,7 +467,7 @@ body::-webkit-scrollbar {
 
 .createdBy {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   //margin: 0px 260px 0px 0px;
 
   &__title {
@@ -475,8 +475,8 @@ body::-webkit-scrollbar {
     font-size: 30px;
     color: #fe5f1e;
     filter: blur(0.8px);
-    margin: -16px 0px 0px 0px;
-    padding: 0px 300px 20px 80px;
+    margin: 20px 0px 0px 0px;
+    //padding: 0px 300px 20px 80px;
   }
 }
 
