--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -791,6 +791,16 @@ body::-webkit-scrollbar {
    }
 }
 @media only screen and (max-width: 687px) {
+  .blockpizza__detail {
+    border: 1px solid #d3d3d3;
+    border-radius: 30px;
+    padding: 30px;
+    padding: 10px 10px 10px 10px;
+    margin: 30px 0px 0px -40px;
+   
+    
+  }
+
 
   .admin__table thead tr{
     display: flex;
