--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -404,7 +404,7 @@ body::-webkit-scrollbar {
     line-height: 27px;
   }
   &__add {
-    margin: -6px 0px 0px 0px;
+    
   }
   &__add button {
     font-weight: 700;
@@ -416,8 +416,15 @@ body::-webkit-scrollbar {
     border-radius: 30px;
     width: 155px;
     height: 40px;
-    padding: 0px 0px 3px 0px;
+    padding: 0px 0px 0px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
+  &__add button span{
+   margin-right: 5px;
+  }
+
   &__add button:hover {
     font-weight: 700;
     font-size: 16px;
@@ -428,7 +435,7 @@ body::-webkit-scrollbar {
     border-radius: 30px;
     width: 155px;
     height: 40px;
-    padding: 0px 0px 3px 0px;
+    padding: 0px 0px 0px 0px;
   }
 }
 
