--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -960,25 +960,40 @@ body::-webkit-scrollbar {
     display: none;
   }
   .stickyContent{
-
+   
+    span{
+      color:  rgba(238, 124, 0, 1);
+      background-color: white;
+      border: 1px solid white;
+      height: 25px;
+      width: 25px;
+      display: inline-block;
+      border-radius: 50%;
+      font-weight: 700;
+      font-size: 10px;
+      padding: 5px 0px 0px 8px;
+      margin: 0px 5px -10px 0px;
+      position: relative;
+      bottom: 4px;
+    }
   }
   .stickyPrice{
-  font-weight: 0;
+  font-weight: 600;
   }
   .stickyContainer{
     transition: width 2s, height 2s, transform 2s;
      display: block;
      position: sticky;
-     top: 700px;
+     top: 760px;
      font-weight: 700;
      font-size: 1rem;
      z-index: 1;
      border: 1px solid white;
     display: flex;
     justify-content: space-between;
-    padding: 10px 20px;
-    margin: 0px 15px;
-    border-radius: 5px;
+    padding: 15px 25px;
+    margin: 0px 30px;
+    border-radius: 10px;
     background: linear-gradient(
     90deg,
     rgba(255, 175, 0, 1) 0%,
