--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -411,8 +411,9 @@
     justify-content: space-between;
   }
   &__price {
-    font-weight: 700;
-    font-size: 22px;
+    margin-top: 5px;
+    font-weight: 800;
+    font-size: 18px;
     line-height: 27px;
   }
   &__add {
