--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1024,6 +1024,17 @@
 .pop__wrapper{
   display: flex;
   overflow: auto;
+  
+}
+.right-left img{
+  width: 30px;
+  height: 30px;
+  margin-left: 10px;
+}
+.right-left{
+    display: flex;
+    justify-content: flex-end;
+    margin: 10px 10px -10px 0px;
 }
 
 .box{ 
@@ -1033,7 +1044,7 @@
     border: 1px solid rgba(32,33,37,0.12);
     border-radius: 15px;
    
-    margin: 20px 20px 0px 0px;
+    margin: 20px 20px 10px 0px;
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 255, .2);
   img{
     width: 243px;
@@ -1042,7 +1053,7 @@
   &__title{
     margin: 15px 0px 15px 0px;
     text-align: center;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 1.125rem;
   }
 }
