--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -818,6 +818,18 @@
 }
 
 @media only screen and (max-width: 687px) {
+  .box{
+    .box__title{
+      font-size: 10px;
+    }
+  }
+  .pop__container{
+    margin: 0px -28px 0px -30px;
+  }
+  .pop__wrapper .box img{
+    width: 130px;
+    height: 130px;
+  }
   .right-left img{
     display: none;
   }
