--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1042,6 +1042,8 @@
   display: flex;
   overflow: scroll;
   scroll-snap-type: x mandatory;
+ // border: 1px solid black;
+  margin: 0px -20px;
 }
 .right-left img{
   width: 30px;
@@ -1055,17 +1057,19 @@
 }
 
 .box{ 
-  
+
     scroll-snap-align: start;
     display: inline-flex;
     flex-direction: column;
    
     border: 1px solid rgba(32,33,37,0.12);
     border-radius: 15px;
-   
+
     margin: 20px 20px 10px 0px;
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 255, .2);
   img{
+    border-top: 1px solid rgba(32,33,37,0.12);
+    border-radius: 15px;
     width: 243px;
     height: 243px;
   }
