--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -18,6 +18,7 @@
 //   display: none;
 // }
 .container {
+  box-shadow: 10px 10px 40px 10px rgba(0, 0, 255, .2);
   max-width: 1300px;
   min-height: 100vh;
   overflow: hidden;
@@ -166,6 +167,7 @@
   }
 
   &__title {
+    
     cursor: pointer;
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
       "Lucida Sans", Arial, sans-serif;
@@ -174,10 +176,7 @@
     font-weight: 900;
     color: rgba(238, 124, 0, 1);
   }
-  &__title:hover {
-    text-shadow: 5px 5px gray;
-    transition: 0.9s;
-  }
+  
   &__text {
     font-size: 16px;
     color: #7b7b7b;
@@ -247,6 +246,7 @@
     display: flex;
   }
   &__list li {
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 255, .2);
     padding: 15px 30px;
     border: 1px solid #f9f9f9;
     background-color: #f9f9f9;
@@ -367,6 +367,7 @@
     //text-align: center;
   }
   &__one ul li:nth-child(1) {
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 255, .2);
     cursor: pointer;
     margin: 5px 10px 0px -15px;
     padding: 10px 25px 10px 20px;
@@ -378,7 +379,7 @@
   }
   &__one ul li:nth-child(2) {
     cursor: pointer;
-
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 255, .2);
     margin:  5px 0px 0px 0px;
     padding:  10px 20px 10px 20px;
     font-size: 14px;
@@ -396,6 +397,7 @@
   }
 
   &__two ul li {
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 255, .2);
     cursor: pointer;
     border-radius: 5px;
     padding: 10px 25px 10px 20px;
